[package]
name = "evervault-test"
version = "0.1.0"
authors = ["James Daly <jamsiedaly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-multipart = "0.3"
futures = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
aes-gcm = "0.8.0"
cast5 = "0.9.0"
rand = "0.8.0"
